Fixed OverFlow Issue

--- a/client/src/components/LoginModal/LoginModal.css
+++ b/client/src/components/LoginModal/LoginModal.css
@@ -1,3 +1,8 @@
+.modal-open {
+  /* Add your desired styles here */
+  overflow: hidden; /* for example, to disable scrolling */
+}
+
 .login-modal {
     position: fixed;
     top: 0;
