--- a/client/src/components/RegisterModal/RegisterModal.css
+++ b/client/src/components/RegisterModal/RegisterModal.css
@@ -1,3 +1,9 @@
+.modal-open {
+  /* Add your desired styles here */
+  overflow: hidden; /* for example, to disable scrolling */
+}
+
+
 .login-modal {
     position: fixed;
     top: 0;
